<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FibonacciActivity!</string>
    <string name="app_name">Fibonacci Series</string>
    <string name="series_activity_name">Series</string>
    <string name="sunflower_activity_name">Sunflower</string>
    <string name="menu_info">About</string>
    <string name="about_description">Fibonacci Series is an open source application for fellow geeks.</string>
    <string name="about_blog">Blog: turbomanage.wordpress.com</string>
    <string name="about_source">Source code: drfibonacci.googlecode.com</string>
    <string name="about_publisher">Author: David M. Chandler</string>
    <string name="app_version">2.2</string>
    <string name="minus">minus</string>
    <string name="sunflower">
		An animation of a sunflower created using a simple equation in polar coordinates. It is
		based on the golden angle, which is the fraction of a circle corresponding to the
		golden mean, which is derived from the Fibonacci series.
	</string>

</resources>