<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:src="@drawable/ic_launcher" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/app_name"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingBottom="5dp"
	    android:text="@string/app_version" />

	<TextView
	    android:id="@+id/textView4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="25dp"
	    android:gravity="center"
	    android:text="@string/about_description" />

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="5dp"
	    android:text="@string/about_publisher" />
	
	<TextView
	    android:id="@+id/textView5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="5dp"
	    android:autoLink="web"
	    android:text="@string/about_blog" />
	
	<TextView
	    android:id="@+id/textView6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:padding="5dp"
	    android:autoLink="web"
	    android:text="@string/about_source" />
	
</LinearLayout>